language pro/project/compile.output
Terminals unused in grammar

   EOL


Grammar

    0 $accept: StartSymbol $end

    1 StartSymbol: %empty
    2            | StartSymbol statements

    3 statements: DeclareStatement
    4           | AssignmentStatement
    5           | IfStatement
    6           | WhileStatement
    7           | '{' StartSymbol '}'

    8 IfStatement: IF '(' expression ')' statements
    9            | IF '(' expression ')' statements ELSE statements

   10 WhileStatement: WHILE '(' expression ')' statements

   11 DeclareStatement: INT ID ';'
   12                 | INT ID '=' expression ';'
   13                 | UINT ID ';'
   14                 | UINT ID '=' expression ';'
   15                 | BOOL ID ';'
   16                 | BOOL ID '=' TR ';'
   17                 | BOOL ID '=' FL ';'

   18 AssignmentStatement: ID '=' expression ';'
   19                    | ID PLEQ expression ';'
   20                    | ID SBEQ expression ';'
   21                    | ID MLEQ expression ';'
   22                    | ID DVEQ expression ';'

   23 expression: expression '|' expression
   24           | expression '&' expression
   25           | expression '^' expression
   26           | '~' expression
   27           | expression '+' expression
   28           | expression '-' expression
   29           | expression '*' expression
   30           | expression '/' expression
   31           | expression '%' expression
   32           | expression LOR expression
   33           | expression LAND expression
   34           | expression GREQ expression
   35           | expression LSEQ expression
   36           | expression GRTH expression
   37           | expression LSTH expression
   38           | expression EQEQ expression
   39           | expression NOTEQ expression
   40           | LNOT expression
   41           | '(' expression ')'
   42           | ID
   43           | TR
   44           | FL
   45           | NUM


Terminals, with rules where they appear

$end (0) 0
'%' (37) 31
'&' (38) 24
'(' (40) 8 9 10 41
')' (41) 8 9 10 41
'*' (42) 29
'+' (43) 27
'-' (45) 28
'/' (47) 30
';' (59) 11 12 13 14 15 16 17 18 19 20 21 22
'=' (61) 12 14 16 17 18
'^' (94) 25
'{' (123) 7
'|' (124) 23
'}' (125) 7
'~' (126) 26
error (256)
NUM (258) 45
ID (259) 11 12 13 14 15 16 17 18 19 20 21 22 42
EOL (260)
INT (261) 11 12
UINT (262) 13 14
BOOL (263) 15 16 17
TR (264) 16 43
FL (265) 17 44
IF (266) 8 9
WHILE (267) 10
IFX (268)
ELSE (269) 9
PLEQ (270) 19
SBEQ (271) 20
MLEQ (272) 21
DVEQ (273) 22
GREQ (274) 34
LSEQ (275) 35
GRTH (276) 36
LSTH (277) 37
EQEQ (278) 38
NOTEQ (279) 39
LOR (280) 32
LNOT (281) 40
LAND (282) 33


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
StartSymbol (44)
    on left: 1 2, on right: 0 2 7
statements (45)
    on left: 3 4 5 6 7, on right: 2 8 9 10
IfStatement (46)
    on left: 8 9, on right: 5
WhileStatement (47)
    on left: 10, on right: 6
DeclareStatement (48)
    on left: 11 12 13 14 15 16 17, on right: 3
AssignmentStatement (49)
    on left: 18 19 20 21 22, on right: 4
expression (50)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45, on right: 8 9 10 12 14 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41


State 0

    0 $accept: . StartSymbol $end

    $default  reduce using rule 1 (StartSymbol)

    StartSymbol  go to state 1


State 1

    0 $accept: StartSymbol . $end
    2 StartSymbol: StartSymbol . statements

    $end   shift, and go to state 2
    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements           go to state 10
    IfStatement          go to state 11
    WhileStatement       go to state 12
    DeclareStatement     go to state 13
    AssignmentStatement  go to state 14


State 2

    0 $accept: StartSymbol $end .

    $default  accept


State 3

   18 AssignmentStatement: ID . '=' expression ';'
   19                    | ID . PLEQ expression ';'
   20                    | ID . SBEQ expression ';'
   21                    | ID . MLEQ expression ';'
   22                    | ID . DVEQ expression ';'

    PLEQ  shift, and go to state 15
    SBEQ  shift, and go to state 16
    MLEQ  shift, and go to state 17
    DVEQ  shift, and go to state 18
    '='   shift, and go to state 19


State 4

   11 DeclareStatement: INT . ID ';'
   12                 | INT . ID '=' expression ';'

    ID  shift, and go to state 20


State 5

   13 DeclareStatement: UINT . ID ';'
   14                 | UINT . ID '=' expression ';'

    ID  shift, and go to state 21


State 6

   15 DeclareStatement: BOOL . ID ';'
   16                 | BOOL . ID '=' TR ';'
   17                 | BOOL . ID '=' FL ';'

    ID  shift, and go to state 22


State 7

    8 IfStatement: IF . '(' expression ')' statements
    9            | IF . '(' expression ')' statements ELSE statements

    '('  shift, and go to state 23


State 8

   10 WhileStatement: WHILE . '(' expression ')' statements

    '('  shift, and go to state 24


State 9

    7 statements: '{' . StartSymbol '}'

    $default  reduce using rule 1 (StartSymbol)

    StartSymbol  go to state 25


State 10

    2 StartSymbol: StartSymbol statements .

    $default  reduce using rule 2 (StartSymbol)


State 11

    5 statements: IfStatement .

    $default  reduce using rule 5 (statements)


State 12

    6 statements: WhileStatement .

    $default  reduce using rule 6 (statements)


State 13

    3 statements: DeclareStatement .

    $default  reduce using rule 3 (statements)


State 14

    4 statements: AssignmentStatement .

    $default  reduce using rule 4 (statements)


State 15

   19 AssignmentStatement: ID PLEQ . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 33


State 16

   20 AssignmentStatement: ID SBEQ . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 34


State 17

   21 AssignmentStatement: ID MLEQ . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 35


State 18

   22 AssignmentStatement: ID DVEQ . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 36


State 19

   18 AssignmentStatement: ID '=' . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 37


State 20

   11 DeclareStatement: INT ID . ';'
   12                 | INT ID . '=' expression ';'

    '='  shift, and go to state 38
    ';'  shift, and go to state 39


State 21

   13 DeclareStatement: UINT ID . ';'
   14                 | UINT ID . '=' expression ';'

    '='  shift, and go to state 40
    ';'  shift, and go to state 41


State 22

   15 DeclareStatement: BOOL ID . ';'
   16                 | BOOL ID . '=' TR ';'
   17                 | BOOL ID . '=' FL ';'

    '='  shift, and go to state 42
    ';'  shift, and go to state 43


State 23

    8 IfStatement: IF '(' . expression ')' statements
    9            | IF '(' . expression ')' statements ELSE statements

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 44


State 24

   10 WhileStatement: WHILE '(' . expression ')' statements

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 45


State 25

    2 StartSymbol: StartSymbol . statements
    7 statements: '{' StartSymbol . '}'

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9
    '}'    shift, and go to state 46

    statements           go to state 10
    IfStatement          go to state 11
    WhileStatement       go to state 12
    DeclareStatement     go to state 13
    AssignmentStatement  go to state 14


State 26

   45 expression: NUM .

    $default  reduce using rule 45 (expression)


State 27

   42 expression: ID .

    $default  reduce using rule 42 (expression)


State 28

   43 expression: TR .

    $default  reduce using rule 43 (expression)


State 29

   44 expression: FL .

    $default  reduce using rule 44 (expression)


State 30

   40 expression: LNOT . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 47


State 31

   26 expression: '~' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 48


State 32

   41 expression: '(' . expression ')'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 49


State 33

   19 AssignmentStatement: ID PLEQ expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 66


State 34

   20 AssignmentStatement: ID SBEQ expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 67


State 35

   21 AssignmentStatement: ID MLEQ expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 68


State 36

   22 AssignmentStatement: ID DVEQ expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 69


State 37

   18 AssignmentStatement: ID '=' expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 70


State 38

   12 DeclareStatement: INT ID '=' . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 71


State 39

   11 DeclareStatement: INT ID ';' .

    $default  reduce using rule 11 (DeclareStatement)


State 40

   14 DeclareStatement: UINT ID '=' . expression ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 72


State 41

   13 DeclareStatement: UINT ID ';' .

    $default  reduce using rule 13 (DeclareStatement)


State 42

   16 DeclareStatement: BOOL ID '=' . TR ';'
   17                 | BOOL ID '=' . FL ';'

    TR  shift, and go to state 73
    FL  shift, and go to state 74


State 43

   15 DeclareStatement: BOOL ID ';' .

    $default  reduce using rule 15 (DeclareStatement)


State 44

    8 IfStatement: IF '(' expression . ')' statements
    9            | IF '(' expression . ')' statements ELSE statements
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 75


State 45

   10 WhileStatement: WHILE '(' expression . ')' statements
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 76


State 46

    7 statements: '{' StartSymbol '}' .

    $default  reduce using rule 7 (statements)


State 47

   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression
   40           | LNOT expression .

    LAND  shift, and go to state 57
    '|'   shift, and go to state 58
    '^'   shift, and go to state 59
    '&'   shift, and go to state 60
    '+'   shift, and go to state 61
    '-'   shift, and go to state 62
    '*'   shift, and go to state 63
    '/'   shift, and go to state 64
    '%'   shift, and go to state 65

    $default  reduce using rule 40 (expression)


State 48

   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   26           | '~' expression .
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65

    $default  reduce using rule 26 (expression)


State 49

   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression
   41           | '(' expression . ')'

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 77


State 50

   34 expression: expression GREQ . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 78


State 51

   35 expression: expression LSEQ . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 79


State 52

   36 expression: expression GRTH . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 80


State 53

   37 expression: expression LSTH . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 81


State 54

   38 expression: expression EQEQ . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 82


State 55

   39 expression: expression NOTEQ . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 83


State 56

   32 expression: expression LOR . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 84


State 57

   33 expression: expression LAND . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 85


State 58

   23 expression: expression '|' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 86


State 59

   25 expression: expression '^' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 87


State 60

   24 expression: expression '&' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 88


State 61

   27 expression: expression '+' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 89


State 62

   28 expression: expression '-' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 90


State 63

   29 expression: expression '*' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 91


State 64

   30 expression: expression '/' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 92


State 65

   31 expression: expression '%' . expression

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    expression  go to state 93


State 66

   19 AssignmentStatement: ID PLEQ expression ';' .

    $default  reduce using rule 19 (AssignmentStatement)


State 67

   20 AssignmentStatement: ID SBEQ expression ';' .

    $default  reduce using rule 20 (AssignmentStatement)


State 68

   21 AssignmentStatement: ID MLEQ expression ';' .

    $default  reduce using rule 21 (AssignmentStatement)


State 69

   22 AssignmentStatement: ID DVEQ expression ';' .

    $default  reduce using rule 22 (AssignmentStatement)


State 70

   18 AssignmentStatement: ID '=' expression ';' .

    $default  reduce using rule 18 (AssignmentStatement)


State 71

   12 DeclareStatement: INT ID '=' expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 94


State 72

   14 DeclareStatement: UINT ID '=' expression . ';'
   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 95


State 73

   16 DeclareStatement: BOOL ID '=' TR . ';'

    ';'  shift, and go to state 96


State 74

   17 DeclareStatement: BOOL ID '=' FL . ';'

    ';'  shift, and go to state 97


State 75

    8 IfStatement: IF '(' expression ')' . statements
    9            | IF '(' expression ')' . statements ELSE statements

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements           go to state 98
    IfStatement          go to state 11
    WhileStatement       go to state 12
    DeclareStatement     go to state 13
    AssignmentStatement  go to state 14


State 76

   10 WhileStatement: WHILE '(' expression ')' . statements

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements           go to state 99
    IfStatement          go to state 11
    WhileStatement       go to state 12
    DeclareStatement     go to state 13
    AssignmentStatement  go to state 14


State 77

   41 expression: '(' expression ')' .

    $default  reduce using rule 41 (expression)


State 78

   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   34           | expression GREQ expression .
   35           | expression . LSEQ expression
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65

    $default  reduce using rule 34 (expression)


State 79

   23 expression: expression . '|' expression
   24           | expression . '&' expression
   25           | expression . '^' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '%' expression
   32           | expression . LOR expression
   33           | expression . LAND expression
   34           | expression . GREQ expression
   35           | expression . LSEQ expression
   35           | expression LSEQ expression .
   36           | expression . GRTH expression
   37           | expression . LSTH expression
   38           | expression . EQEQ expression
   39           | expression . NOTEQ expression

    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65

    $default  reduce using rule 35 (expression)


State 80
